--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js "></script>
         <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
-<!--        <script src="//cdn.jsdelivr.net/sockjs/1/sockjs.min.js"></script>-->
+        <script type="text/javascript" src="cordova.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
         <script src="js/lib/angular-chat.js"></script>
         <script src="js/lib/ui-bootstrap-tpls-0.11.0.js"></script>
