--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ and open the template in the editor.
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
         <script src="js/lib/angular-chat.js"></script>
         <script src="js/lib/ui-bootstrap-tpls-0.11.0.js"></script>
-        <script src="js/server_client/client.js"></script>
+        <script src="app.js"></script>
+<!--        <script src="js/server_client/client.js"></script>-->
         <link rel="stylesheet" type="text/css"  href="css/bootstrap.min.css"/>
         <style>
             ::-webkit-scrollbar {
@@ -84,7 +85,7 @@ and open the template in the editor.
             <header id="header">
                 <strong><b>Broadcast Messages</b></strong>
             </header>
-            <div id="content" scroll-bottom="messages" >
+            <div id="content" scroll-bottom="messages" style="padding-top:10px;">
                 <div ng-repeat="message in messages" style="padding:0px;padding-left: 0px;padding-top: 5px;">
                       <div class="col-md-12 col-sm-12 col-xs-12" style="padding:0px;padding-top: 2px;padding-right: 5px;padding-left: 2px;padding-bottom: 2px;">
                           <div class="col-md-2 col-sm-2 col-xs-2" style="word-wrap: break-word;overflow-wrap: break-word;padding:0px;padding-right: 2px;text-align: left;">{{ message.user.name }}<span class="pull-right">:</span></div><div class="col-md-10 col-sm-10 col-xs-10 " style="background-color: #bce8f1;word-wrap: break-word;overflow-wrap: break-word;white-space: pre-wrap;">{{ message.data }}</div>
