--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@ and open the template in the editor.
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
         <script src="js/lib/angular-chat.js"></script>
         <script src="js/lib/ui-bootstrap-tpls-0.11.0.js"></script>
-        <script src="app.js"></script>
-<!--        <script src="js/server_client/client.js"></script>-->
+        <script src="js/server_client/client.js"></script>
         <link rel="stylesheet" type="text/css"  href="css/bootstrap.min.css"/>
         <style>
             ::-webkit-scrollbar {
