i think network connections fixed

--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@ and open the template in the editor.
 
         </style>
     </head>
-    <body style="background-color:#EBFBC8;" ng-controller="chatting_controller" ng-init="focus();open()">
+    <body style="background-color:#EBFBC8;" ng-controller="chatting_controller" ng-init="focus();open();">
         <script type="text/ng-template" id="myModalContent.html" >
         <form ng-submit="ok()" name="username_form">
         <div class="modal-header">
