--- a/index.html
+++ b/index.html
@@ -1,71 +1,13 @@
-<!DOCTYPE html>
+
 <html>
     <head>
-        <meta name="format-detection" content="telephone=no">
-<!--        <meta name="msapplication-tap-highlight" content="no" />-->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="./lib/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="./css/index.css">
-        <script type="text/javascript" src="./lib/js/jquery-1.12.4.min.js"></script>
-        <script type="text/javascript" src="./lib/js/angular.js"></script>
-        <script src="./lib/js/pubnub-3.7.21.js"></script>
-        <script src="./lib/js/pubnub-angular-3.1.1.js"></script>
-         <script type="text/javascript" src="./lib/js/ui-bootstrap-tpls-0.11.0.js"></script>
-        <script type="text/javascript" src="./js/controllers/app.js"></script>
-        <title>BroadCast Messenger</title>
+        <title>TODO supply a title</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script>
+            window.location='./home.html';
+        </script>
     </head>
-    <body ng-app="ChattingApp" ng-controller="ChatApp_Controller" style="background-color:#EBFBC8;" ng-init="focus();open();">
-        <script type="text/ng-template" id="myModalContent.html" >
-        <form ng-submit="ok()" name="username_form">
-        <div class="modal-header">
-            <h3 class="modal-title">Please Enter your name :</h3>
-        </div>
-        <div class="modal-body">
-              <input type="text" id="username" ng-model="user.name" name="username" placeholder="Username" ng-pattern ="/^[a-zA-Z\s]*$/" ng-minlength="3" ng-maxlength="10" required>
-                <p class="help-block" style="color:red;" ng-show="username_form.username.$error.pattern">Username must be letters only.</p>
-                <p class="help-block" style="color:red;" ng-if="username_form.username.$error.minlength">Must be at least 3 characters.</p>
-                <p class="help-block" style="color:red;" ng-if="username_form.username.$error.maxlength">Must be maximum of 10 characters.</p>
-        </div>
-        
-      
-        <div class="modal-footer">
-            <button class="btn btn-primary" type="submit" ng-disabled="username_form.$invalid">OK</button>
-        </div>
-        </form>
-    </script>
-        <div class="container-fluid" style="padding:0px;">
-            <header class="col-md-12 col-sm-12 col-xs-12" id="header">
-                <strong><b>Broadcast Messages</b></strong>
-            </header>
-            <div class="content">
-                <div ng-repeat="message in messages" id="messagecontent" class="collection-item col-md-12 col-sm-12 col-xs-12" >
-                    <div class="col-md-12 col-sm-12 col-xs-12" id="{{differentiatemessage(message.sender_uuid)}}_user">
-                        <div class="col-md-2 col-sm-2 col-xs-2" id="sender_img_div">
-                            <img src="{{avatarUrl(message.sender_uuid)}}" alt="{{message.sender_uuid}}" class="circle" height="40px" width="40px">
-                        </div>
-                        <div class="col-md-10 col-sm-10 col-xs-10" id="nopadding" style="padding-left:5px;">
-                            <b><span class="title" ng-bind="message.sender_uuid"></span></b><br>
-                            <i class="prefix mdi-action-alarm"></i><span class="message-date" ng-if="message.date" style="color:grey;font-family: Consolas;font-size: 12px;">{{ message.date | date:"h:mma 'on' MM/dd/yyyy"}}</span>
-                        </div>
-                    </div>
-                    <div  class="col-md-12 col-sm-12 col-xs-12" id="{{differentiatemessage(message.sender_uuid)}}_messagestyle" ng-bind="message.content">
-                    </div>
-                </div>
-            </div>
-            <footer id="footer">
-                <form ng-submit="sendMessage();textbox='';focus();">
-                    <div class="col-md-12 col-sm-12 col-xs-12" style="padding:0px;height:45px;width:100%;">
-                        <div class="col-md-11 col-m-11 col-xs-10" style="padding:0px;">
-                            <textarea  style="width:100%;height:45px;padding:0px;padding-left: 5px;padding-top: 10px;font-size:18px;" ng-model="messageContent" name="message" id="msg" placeholder="Type Your Message" required></textarea>
-                        <!--ng-disabled="!onlinestatus"-->
-                        </div>
-                        <div class="col-md-1 col-sm-1 col-xs-2" style="padding:0px;">
-                            <button style="padding:0px;height:45px;width:100%;" type="submit" name="send" id="send"><img src="img/send/send.jpg" style="height: 100%;width:100%;"/></button>
-                        </div>
-                    </div>
-                </form>
-            </footer>
-        </div>        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="./js/index.js"></script>
+    <body>
     </body>
 </html>
