--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
-<!DOCTYPE html>
 <html>
     <head>
-        <meta name="format-detection" content="telephone=no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
+        <title>Backup Contacts</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script>
-            
+            window.location='./login.html';
         </script>
     </head>
     <body>
-        <div class="app">
-          <ol id="contact"></ol>
-        </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
