--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
 		  <div class="panel-heading" id="headerhome" style="font-size:20px;"><b>Contacts</b>
               <button type="button" class="btn btn-primary pull-right"><b>Upload All</b></button>
           </div>
-          <table class="table table-hover">
-            <thead id="headertable">
+          <table class="table table-hover" id="headertable">
+            <thead>
                 <tr>
                     <th class="col-sm-1 col-xs-1 col-md-1"><strong>No</strong></th>
                     <th class="col-sm-9 col-xs-9 col-md-9"><strong>Available Contacts</strong></th>
@@ -23,7 +23,7 @@
                 </tr>
             </thead>
             <tbody id="result">
-                
+           
             </tbody>
           </table>
 		</div>
