Loading image final

--- a/home.html
+++ b/home.html
@@ -14,9 +14,10 @@
         <script type="text/javascript" src="js/index.js"></script>
     </head>
     <body ng-app="homeapp" ng-controller="home_controller">
-        <div ng-if="loading" id="loaderbackground">
+        <div  id="loaderbackground">
             <div id="loader">
-                <img src="css/loading/loader_default.gif" height="100%" width="100%"></img>
+                <img src="css/loading/loader_default.gif" height="100%" width="100%"></img><br>
+                <span>Loading..</span>
             </div>
         </div>
 		<div class="container-fluid panel panel-primary" style="padding:0px;">
