--- a/home.html
+++ b/home.html
@@ -1,19 +1,19 @@
-<html>
+<html ng-app="Contactshome">
     <head>
         <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1,height=device-height, target-densitydpi=medium-dpi,width=device-width">
         <title>Contact Backup</title>
 		<link rel="stylesheet" type="text/css" href="lib/css/bootstrap.min.css"></link>
-        <link rel="stylesheet" type="text/css" href="css/index.css"></link>    
-        <script type="text/javascript" src="lib/js/jquery-1.12.4.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/index.css"></link>
         <script type="text/javascript" src="lib/js/angular.min.js"></script>
-        <script type="text/javascript" src="js/controllers/login_controller.js"></script>
+        <script type="text/javascript" src="lib/js/jquery-1.12.4.min.js"></script>
+        <script type="text/javascript" src="js/controllers/home_controller.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </head>
-    <body ng-app="homeapp" ng-controller="home_controller">
+    <body  ng-controller="home_controller" >
         <div ng-if="loading" id="loaderbackground">
             <div id="loader">
                 <img src="css/loading/loader_default.gif" height="100%" width="100%"></img><br>
@@ -21,7 +21,7 @@
             </div>
         </div>
 		<div class="container-fluid panel panel-primary" style="padding:0px;">
-		  <div class="panel-heading" id="headerhome" style="font-size:20px;"><b>Contacts</b>
+		  <div class="panel-heading" id="headerhome" style="font-size:20px;padding-right:5px;"><b>Contacts</b>
               <button type="button" class="btn btn-primary pull-right"><b>Upload All</b></button>
           </div>
           <div>
@@ -29,8 +29,8 @@
                 <thead>
                     <tr>
                         <th class="col-sm-1 col-xs-1 col-md-1"><strong>No</strong></th>
-                        <th class="col-sm-9 col-xs-9 col-md-9"><strong>Available Contacts</strong></th>
-                        <th class="col-sm-2 col-xs-2 col-md-2"><button type="button" class="btn btn-success"><b>Refresh</b></button></th>
+                        <th class="col-sm-10 col-xs-10 col-md-10"><strong>Available Contacts</strong></th>
+                        <th class="col-sm-1 col-xs-1 col-md-1" style="padding-right:5px;"><button type="button" ng-click="refreshcontacts();" class="btn btn-success"><b>Refresh</b></button></th>
                     </tr>
                 </thead>
               </table>
@@ -41,11 +41,11 @@
                     <div class="alert alert-danger" id="noresults"> No results found !!</div>
 <!--                    <tr class="container-fluid" >
                        <td class="col-sm-1 col-xs-1 col-md-1">123</td>
-                       <td class="col-sm-9 col-xs-9 col-md-9" style="font-size:16px;">
+                       <td class="col-sm-10 col-xs-10 col-md-10" style="font-size:16px;padding-left:4px;padding-right:2px;">
                                <div><b><span>Name</span>: </b><span style="padding-left:2px;">senthurathibanathiban</span></div>
                                <div><b><span>Number</span>: </b><span style="padding-left:2px;">987654321234567</span></div>
                        </td>
-                       <td class="col-sm-2 col-xs-2 col-md-2" style="padding-top:10px;padding-bottom:10px;">
+                       <td class="col-sm-1 col-xs-1 col-md-1" style="padding-left:4px;padding-right:5px;padding-top:10px;padding-bottom:10px;">
                            <button type="button" class="btn btn-warning" style="height:35px;padding-top:2px;padding-bottom:2px;">Upload</button>
                        </td>
                    </tr> -->
