--- a/login.html
+++ b/login.html
@@ -17,8 +17,8 @@
             <h1>Backup Contacts</h1>
         </div>
         <ul class="tab-group">
-            <li class="tab active"><a href="#signup">Sign Up</a></li>
-            <li class="tab"><a href="#login">Log In</a></li>
+            <li class="tab"><a ng-click="validate=false;" href="#signup">Sign Up</a></li>
+            <li class="tab active"><a  ng-click="validate=false;" href="#login">Log In</a></li>
         </ul>
         <div class="tab-content">
         <div id="signup">   
@@ -66,7 +66,7 @@
               <p if="!login_mail">Email ID is Invalid</p>
             </strong>
           </div>
-          <div class="alert alert-danger" ng-if="validate">
+          <div class="alert alert-danger" ng-if="validate" style="padding-left:5px;padding-right:5px;">
             <strong>
               <p if="validate">Email ID or Password is Incorrect</p>
             </strong>
