--- a/home.html
+++ b/home.html
@@ -78,13 +78,13 @@
             <table class="table table-hover">
                 <tbody id="result">
                      <tr ng-repeat="contact in retrivedcontacts | filter:searchtext">
-                        <td class="col-sm-1 col-xs-1 col-md-1">1</td>
+                        <td class="col-sm-1 col-xs-1 col-md-1" ng-bind="$scope.count=$scope.count+1;"></td>
                         <td class="col-sm-10 col-xs-10 col-md-10" style="font-size:16px;padding-left:8px;padding-right:5px;">
                             <div>
-                                <div><b><span>Name</span>: </b><span style="padding-left:2px;">{{contact.contactName}}</span></div>
+                                <div><b><span>Name</span>: </b><span style="padding-left:2px;" ng-bind="contact.contactName"></span></div>
                             </div>
                             <div>
-                                <div><b><span>Number</span>: </b><span style="padding-left:2px;">{{contact.contactNo}}</span></div>
+                                <div><b><span>Number</span>: </b><span style="padding-left:2px;" ng-bind="contact.contactNo"></span></div>
                             </div>
                         </td>
                         <td class="col-sm-1 col-xs-1 col-md-1" style="padding-left:0px;padding-right:5px;padding-top:10px;padding-bottom:10px;">
