--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
   <body ng-controller="Contacts_sync_controller">
     <div class="form" id="main" style="padding-bottom:20px;">
         <div class="tab-content">
-            <h1>Backup Contacts</h1>
+            <h1><img src="img/logo.png" height="50px" width="100%;"></img></h1>
         </div>
         <ul class="tab-group">
             <li class="tab"><a ng-click="validate=false;" href="#signup">Sign Up</a></li>
