back button fixed and session login working

--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
                                 <strong>Contacts</strong>
                             </th>
                             <th class="col-sm-1 col-xs-1 col-md-1" style="padding-top:4px;padding-bottom:4px;padding-right:5px;">
-                                <button type="button" ng-click="refreshcontacts();searchtext='';" class="btn btn-sm btn-success" style="height:35px;padding-left:7px;padding-right:7px;" >
+                                <button type="button" ng-click="loadingimage=true;refreshcontacts();searchtext='';" class="btn btn-sm btn-success" style="height:35px;padding-left:7px;padding-right:7px;" >
                                     <b><span ng-bind="displaynames.refresh"></span></b>
                                 </button>
                             </th>
