--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
                 <p ng-if="!signup_email">Email is Invalid</p>
               </strong>
             </div>
-            <form ng-submit="signup()">
+            <form ng-submit="signup();submittedsignup=true;">
               <div class="field-wrap">
                 <label>
                   User Name<span class="req">*</span>
@@ -60,7 +60,7 @@
                 </label>
                 <input type="email" ng-pattern='/^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/' name="email" ng-model="signup_email" required autocomplete="off"/>
               </div>
-              <button type="submit" class="button button-block"/>Get Started</button>
+              <button type="submit" ng-disabled="submittedsignup" ng-dblclick="return false;" class="button button-block"/>Get Started</button>
               </form>
         </div>
         <div id="login">   
@@ -75,7 +75,7 @@
               <p if="validate">Email ID or Password is Incorrect</p>
             </strong>
           </div>
-          <form ng-submit="login()">
+          <form ng-submit="login();submitted=true;">
               <div class="field-wrap">
               <label>
                 Email Address<span class="req">*</span>
@@ -89,7 +89,7 @@
                 <input type="password"  ng-model="login_password" required autocomplete="off" ng-change="validate=false;validateemail=false;"/>
               </div>
               <p class="forgot"><a href="#">Forgot Password?</a></p>
-              <button type="submit" class="button button-block"/>Log In</button>
+              <button type="submit" ng-disabled="submitted" ng-dblclick="return false;" class="button button-block"/>Log In</button>
               </form>
             </div>
           </div><!-- tab-content -->
